# FastCaloSim

./: .codespellrc  .gitignore  .pre-commit-config.yaml  AUTHORS  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CaloCellLookup_8h.html  CaloDetDescrElement_8h.html  CaloGeo_8h.html  CaloGeometryFromFile_8h.html  CaloGeometryLookup_8h.html  CaloGeometry_8h.html  CaloSampling_8h.html  CellCache_8h.html  CellStoreBuilder_8h.html  CellStore_8h.html  Cell_8h.html  DoubleArray_8h.html  FCAL__ChannelMap_8h.html  FCal_8h.html  FSmap_8h.html  FastCaloSimCaloExtrapolation_8h.html  FastCaloSim_8h.html  FastCaloSim__CaloCell__ID_8h.html  G4CaloTransportTool_8h.html  HACKING.md  ICaloGeometry_8h.html  ISF__FastCaloSimEventDict_8h.html  Identifier_8h.html  IntArray_8h.html  LICENSE  LinkDef_8h.html  MLogging_8h.html  MeanAndRMS_8h.html  ParticleData_8h.html  README.md  README_8md.html  RTreeBuilder_8h.html  (+339 more)
param/: CMakeLists.txt
param/executables/: createParamSlice.cxx
param/include/FastCaloSimParam/: LinkDef.h
param/source/: CMakeLists.txt
test/: CMakeLists.txt
test/TestConfig/: AtlasDeprecatedGeoTestsConfig.h  AtlasGeoTestsConfig.h  AtlasSimTestsConfig.h  AtlasTransportTestsConfig.h  BasicSimTestsConfig.h  G4RunTestsConfig.h  GeoTestsConfig.h
test/TestHelpers/: Container.h  Event.h  ExtrapStateContainer.h  ExtrapolationStateContainer.h  GeoPluginLoader.h  IDCaloBoundary.h  IOManager.h  JsonComparer.h  LegacyCompatibility.h  LogComparer.h  MagFieldPlugin.h  Particle.h  ParticleContainer.h  ParticleSampler.h  ParticleSimParams.h  ParticleTypes.h  SimStateContainer.h  Track.h  TrackContainer.h
test/TestPlugins/ATLAS/ATLASFCalGeoPlugin/: CMakeLists.txt
test/TestPlugins/ATLAS/ATLASFCalGeoPlugin/src/: FCAL_ChannelMap.cxx
test/TestPlugins/ATLAS/ATLASMagneticFieldMapPlugin/: CMakeLists.txt
test/TestPlugins/ATLAS/ATLASMagneticFieldMapPlugin/src/: ATLASMagneticFieldMapPlugin.cxx  AtlasFieldSvc.cxx  AtlasFieldSvc.h  AtlasFieldSvcTLS.h  BFieldCache.h  BFieldCacheZR.h  BFieldMesh.h  BFieldSolenoid.cxx  H8FieldSvc.cxx  H8FieldSvc.h  IMagFieldSvc.h
test/data/: SelEkin_id22_Mom65536_65536_eta_20_25.root
test/data/geometry/: ATLAS-R2-2016-01-00-01.root  simplified_geo.gdml
test/data/geometry/ATLAS/ATLAS-R2-2016-01-00-01/: CaloCells.root  simplified_geo.gdml
test/data/geometry/ATLAS/ATLAS-R3S-2021-03-02-00/: CaloCells.root
test/data/param/: TFCSParam_pid22_Mom16384_131072_eta_15_30.root
test/data/param/fcal/: TFCSParam_pid22_pid211_Mom16384_131072_eta_345_355.root
test/g4app/: CMakeLists.txt
test/g4app/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  FastSimModel.hh  PrimaryGeneratorAction.hh  RunAction.hh
test/g4app/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  FastSimModel.cc  PrimaryGeneratorAction.cc  RunAction.cc
test/include/: AtlasDeprecatedGeoTests.h  AtlasGeoTests.h  AtlasSimTests.h  AtlasTransportTests.h  BasicExtrapolTests.h  BasicSimTests.h  G4RunTests.h  GeoTests.h  SimStateTests.h  TruthStateTests.h
test/python/: bitfield_decoder_tests.py  dd4hep_decoder_tests.py  plot_extrapolation.py  plot_helpers.py  plot_simulation.py  plot_transport.py  requirements.txt
test/python/scripts/: calo_layers.csv  plot_simulation.py
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid211_E131072_eta145/: sim_state_data.json  transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid211_E131072_eta20/: sim_state_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid211_E131072_eta200/: sim_state_data.json  transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid211_E131072_eta320/: sim_state_data.json  transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid211_E131072_eta350/: sim_state_data.json  transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid211_E131_eta20/: transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid211_E16384_eta145/: sim_state_data.json  transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid211_E16384_eta20/: sim_state_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid211_E16384_eta200/: sim_state_data.json  transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid211_E16384_eta320/: sim_state_data.json  transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid211_E16384_eta350/: sim_state_data.json  transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid211_E16_eta20/: transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid22_E131072_eta145/: sim_state_data.json  transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid22_E131072_eta20/: sim_state_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid22_E131072_eta200/: sim_state_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid22_E131072_eta320/: sim_state_data.json  transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid22_E131072_eta350/: sim_state_data.json  transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid22_E131_eta20/: sim_state_data.json  transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid22_E16384_eta145/: sim_state_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid22_E16384_eta20/: sim_state_data.json  transport_data.json
test/refs/AtlasSimulation/AtlasSimTests_AtlasSimulation/pid22_E16384_eta200/: sim_state_data.json  (+1 more)
test/source/: AtlasDeprecatedGeoTests.cxx  AtlasGeoTests.cxx  AtlasSimTests.cxx  AtlasTransportTests.cxx  BasicExtrapolTests.cxx  BasicSimTests.cxx  FastCaloSim_test.cpp  GeoTests.cxx  ParamCreationTests.cxx  SimStateTests.cxx  TruthStateTests.cxx  basic_class_tests.cxx  basic_sim_tests.cxx  param_file_tests.cxx  sim_state_tests.cxx  transport_tests.cxx  truth_state_tests.cxx
test/static-embed/: CMakeLists.txt  main.cxx  probe.cxx
(+435 files in other folders)
